--- a/Time Table Project with HTML/index.html
+++ b/Time Table Project with HTML/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Table | Time Table -->
-    <table border cellpadding="16px">
+    <table border cellpadding="16px" bordercolor="blue">
         <thead>
             <tr>
                 <th colspan="8">Time Table</th>
